--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>The Witcher</title>
-    <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/libs.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -19,7 +19,7 @@
                 <div class="container">
                     <div class="header__box">
                         <div class="header__menu">
-                            <a href="#" class="header__logo"><img src="/img/logo.svg" alt="logo"></a>
+                            <a href="#" class="header__logo"><img src="img/logo.svg" alt="logo"></a>
                             <nav>
                                 <ul>
                                     <a><a href="#">Описание</a></li>
@@ -29,9 +29,9 @@
                             </nav>
                         </div>
                         <div class="header__link">
-                            <a href="#"><img src="/img/twitter.svg" alt="twitter"></a>
-                            <a href="#"><img src="/img/instagram.svg" alt="instagram"></a>
-                            <a href="#"><img src="/img/facebook.svg" alt="facebook"></a>
+                            <a href="#"><img src="img/twitter.svg" alt="twitter"></a>
+                            <a href="#"><img src="img/instagram.svg" alt="instagram"></a>
+                            <a href="#"><img src="img/facebook.svg" alt="facebook"></a>
                         </div>
                     </div>
                 </div>
@@ -40,16 +40,16 @@
                 <div class="container">
                     <span>2019, фэнтези</span>
                     <ul class="main-rating">
-                        <li><img src="/img/full-star.svg" alt="star-rate"></li>
-                        <li><img src="/img/full-star.svg" alt="star-rate"></li>
-                        <li><img src="/img/full-star.svg" alt="star-rate"></li>
-                        <li><img src="/img/full-star.svg" alt="star-rate"></li>
-                        <li><img src="/img/full-star.svg" alt="star-rate"></li>
-                        <li><img src="/img/full-star.svg" alt="star-rate"></li>
-                        <li><img src="/img/full-star.svg" alt="star-rate"></li>
-                        <li><img src="/img/star.svg" alt="star-rate"></li>
-                        <li><img src="/img/star.svg" alt="star-rate"></li>
-                        <li><img src="/img/star.svg" alt="star-rate"></li>
+                        <li><img src="img/full-star.svg" alt="star-rate"></li>
+                        <li><img src="img/full-star.svg" alt="star-rate"></li>
+                        <li><img src="img/full-star.svg" alt="star-rate"></li>
+                        <li><img src="img/full-star.svg" alt="star-rate"></li>
+                        <li><img src="img/full-star.svg" alt="star-rate"></li>
+                        <li><img src="img/full-star.svg" alt="star-rate"></li>
+                        <li><img src="img/full-star.svg" alt="star-rate"></li>
+                        <li><img src="img/star.svg" alt="star-rate"></li>
+                        <li><img src="img/star.svg" alt="star-rate"></li>
+                        <li><img src="img/star.svg" alt="star-rate"></li>
                         <li><span>7/10</span></li>
                     </ul>
                     <h1>Ведьмак</h1>
@@ -57,58 +57,58 @@
                         Континенту. За тугой мешочек чеканных монет этот мужчина избавит вас от всякой настырной нечисти
                         — хоть от чудищ болотных, оборотней и даже заколдованных принцесс. </p>
                     <a href="#" class="main__btn">Смотреть онлайн</a>
-
-                    <div class="swiper-container">
-                        <!-- Additional required wrapper -->
-                        <div class="swiper-wrapper">
-                            <!-- Slides -->
-                            <a href="#" class="swiper-slide one">
-                                <div class="slide__text">
-                                    <span>Серия #1</span>
-                                    <span>Начало конца</span>
-                                </div>
-                            </a>
-                            <a href="#" class="swiper-slide two">
-                                <div class="slide__text">
-                                    <span>Серия #2</span>
-                                    <span>Четыре знака</span>
-                                </div>
-                            </a>
-                            <a href="#" class="swiper-slide two">
-                                <div class="slide__text">
-                                    <span>Серия #3</span>
-                                    <span>Начало конца</span>
-                                </div>
-                            </a>
-                            <a href="#" class="swiper-slide two">
-                                <div class="slide__text">
-                                    <span>Серия #4</span>
-                                    <span>Начало конца</span>
-                                </div>
-                            </a>
-                            <a href="#" class="swiper-slide two">
-                                <div class="slide__text">
-                                    <span>Серия #5</span>
-                                    <span>Начало конца</span>
-                                </div>
-                            </a>
-                            <a href="#" class="swiper-slide two">
-                                <div class="slide__text">
-                                    <span>Серия #6</span>
-                                    <span>Начало конца</span>
-                                </div>
-                            </a>
+                    <div class="slider__wrapper">
+                        <div class="swiper-container">
+                            <!-- Additional required wrapper -->
+                            <div class="swiper-wrapper">
+                                <!-- Slides -->
+                                <a href="#" class="swiper-slide" style="background-image: url(img/card-image1.png);">
+                                    <div class="slide__text">
+                                        <span>Серия #1</span>
+                                        <span>Начало конца</span>
+                                    </div>
+                                </a>
+                                <a href="#" class="swiper-slide" style="background-image: url(img/card-image2.png);">
+                                    <div class="slide__text">
+                                        <span>Серия #2</span>
+                                        <span>Четыре знака</span>
+                                    </div>
+                                </a>
+                                <a href="#" class="swiper-slide" style="background-image: url(img/card-image2.png);">
+                                    <div class="slide__text">
+                                        <span>Серия #3</span>
+                                        <span>Начало конца</span>
+                                    </div>
+                                </a>
+                                <a href="#" class="swiper-slide" style="background-image: url(img/card-image2.png);">
+                                    <div class="slide__text">
+                                        <span>Серия #4</span>
+                                        <span>Начало конца</span>
+                                    </div>
+                                </a>
+                                <a href="#" class="swiper-slide" style="background-image: url(img/card-image2.png);">
+                                    <div class="slide__text">
+                                        <span>Серия #5</span>
+                                        <span>Начало конца</span>
+                                    </div>
+                                </a>
+                                <a href="#" class="swiper-slide" style="background-image: url(img/card-image2.png);">
+                                    <div class="slide__text">
+                                        <span>Серия #6</span>
+                                        <span>Начало конца</span>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
-                        <div class="swiper-button-next"><img src="/img/arrow.svg" alt="arrow"></div>
+                        <div class="swiper-button-next"><img src="img/arrow.svg" alt="arrow"></div>
                     </div>
-                </div>
-                <a href="#" class="play__btn">
-                    <div class="big__circle">
-                        <div class="small__circle">
-                            <div class="btn__icon"><img src="/img/play.svg" alt="play"></div>
+                    <a href="#" class="play__btn">
+                        <div class="big__circle">
+                            <div class="small__circle">
+                                <div class="btn__icon"><img src="img/play.svg" alt="play"></div>
+                            </div>
                         </div>
-                    </div>
-                </a>
+                    </a>
             </section>
         </div>
 
